k8s/coma/apps/mailu/mta-sts-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: mta-sts-text
  namespace: default
spec:
  contentType: text/plain
  headers:
    customResponseHeaders:
      Content-Type: text/plain
    customRequestHeaders:
      Content-Type: text/plain
  responseHeaders:
    replace:
      - name: Content-Type
        value: text/plain
    set:
      X-Content-Type-Options: nosniff
    add:
      X-Response: |-
        version: STSv1
        mode: enforce
        max_age: 1296000
        mx: mail.artichoke.cc
